--- a/app/src/main/res/layout/activity_new_empleado.xml
+++ b/app/src/main/res/layout/activity_new_empleado.xml
@@ -36,7 +36,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/lbl_dni"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="13" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -54,7 +55,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/lbl_nombre_completo"
-            android:inputType="text" />
+            android:inputType="text"
+            android:maxLength="100" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -143,7 +145,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/lbl_salario"
-            android:inputType="number|numberDecimal" />
+            android:inputType="number|numberDecimal"
+            android:maxLength="7" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
