--- a/app/src/main/res/layout/departamento_item.xml
+++ b/app/src/main/res/layout/departamento_item.xml
@@ -23,58 +23,62 @@
             android:background="@color/purple_300">
 
             <ImageView
-                android:id="@+id/iconoEmpleado"
+                android:id="@+id/imgDepto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/lbl_imagen_empleado"
-                android:scaleType="fitStart"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/empleado" />
+                app:srcCompat="@drawable/depto" />
 
             <TextView
-                android:id="@+id/tvNombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/tvDeptoNombre"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/iconoEmpleado"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imgEditDepto"
+                app:layout_constraintStart_toEndOf="@+id/tvIdDepto"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/lbl_nombre_prueba" />
+                tools:text="Departamento" />
 
             <TextView
-                android:id="@+id/tvDNI"
+                android:id="@+id/tvIdDepto"
                 android:layout_width="wrap_content"
-                android:layout_height="19dp"
-                android:layout_marginTop="8dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginBottom="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textColor="@color/gray1"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/tvNombre"
-                app:layout_constraintTop_toBottomOf="@+id/tvNombre"
-                tools:text="@string/lbl_dni_prueba" />
+                app:layout_constraintStart_toEndOf="@+id/imgDepto"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="1" />
 
             <ImageView
-                android:id="@+id/imgVer"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="8dp"
-                android:contentDescription="@string/lbl_imagen_eliminar"
+                android:id="@+id/imgEditDepto"
+                android:layout_width="36dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_preview_24" />
+                app:srcCompat="@drawable/baseline_edit_24" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
