--- a/app/src/main/res/layout/planilla_item.xml
+++ b/app/src/main/res/layout/planilla_item.xml
@@ -23,7 +23,7 @@
             android:background="@color/purple_300">
 
             <ImageView
-                android:id="@+id/iconoEmpleado"
+                android:id="@+id/iconoPlanilla"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -35,46 +35,59 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/empleado" />
+                app:srcCompat="@drawable/planilla" />
 
             <TextView
-                android:id="@+id/tvNombre"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvPlanillaFecha"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/iconoEmpleado"
+                app:layout_constraintEnd_toStartOf="@+id/imgPlanillaVer"
+                app:layout_constraintStart_toEndOf="@+id/tvIDPlanilla"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/lbl_nombre_prueba" />
+                tools:text="24/09/2023" />
 
             <TextView
-                android:id="@+id/tvDNI"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvPlanillaMonto"
+                android:layout_width="0dp"
                 android:layout_height="19dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textColor="@color/gray1"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/tvNombre"
-                app:layout_constraintTop_toBottomOf="@+id/tvNombre"
-                tools:text="@string/lbl_dni_prueba" />
+                app:layout_constraintEnd_toEndOf="@+id/tvPlanillaFecha"
+                app:layout_constraintStart_toStartOf="@+id/tvPlanillaFecha"
+                app:layout_constraintTop_toBottomOf="@+id/tvPlanillaFecha"
+                tools:text="L. 1000" />
 
             <ImageView
-                android:id="@+id/imgVer"
+                android:id="@+id/imgPlanillaVer"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:contentDescription="@string/lbl_imagen_eliminar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_preview_24" />
+                app:srcCompat="@drawable/rep" />
+
+            <TextView
+                android:id="@+id/tvIDPlanilla"
+                android:layout_width="22dp"
+                android:layout_height="23dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iconoPlanilla"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="1" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
