--- a/app/src/main/res/layout/activity_new_empleado.xml
+++ b/app/src/main/res/layout/activity_new_empleado.xml
@@ -157,6 +157,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@color/purple_400"
         android:text="@string/lbl_guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
