--- a/app/src/main/res/layout/activity_new_cargo.xml
+++ b/app/src/main/res/layout/activity_new_cargo.xml
@@ -32,8 +32,13 @@
         android:id="@+id/btnGuardarCargo"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/purple_400"
         android:text="Guardar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tilSalarioCargo"
