--- a/app/src/main/res/layout/activity_new_planilla.xml
+++ b/app/src/main/res/layout/activity_new_planilla.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
+        android:background="@color/purple_400"
         android:text="Guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
